#78 Use Java 21 for building